updated CSS to fix title overlap issue with the board

--- a/src/Board.css
+++ b/src/Board.css
@@ -56,6 +56,7 @@ table tr:last-child td:last-child {
 
 .Board-title {
     display: flex;
+    margin-bottom: 30px;
     align-items: center;
     justify-content: center;
 }
